--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -1,5 +1,7 @@
 $max-width: 1200px;
 $gutter: 20px;
+$font-main: Lora, "Times New Roman", serif;
+$font-heading: "Roboto Mono", "Courier New", monospace;
 
 div {
   villa-fjarlægðu-mig;
