--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -2,8 +2,16 @@ $max-width: 1200px;
 $gutter: 20px;
 $font-main: Lora, "Times New Roman", serif;
 $font-heading: "Roboto Mono", "Courier New", monospace;
-
-div {
-  villa-fjarlægðu-mig;
-  stylelint-ætti-að-kvarta;
+@mixin row() {
+  display: flex;
+  margin-right: -($gutter / 2);
+  margin-left: -($gutter / 2);
+}
+@mixin columns($col: 1) {
+  width: ($col / 12 * 100) * 1%;
+  padding-right: $gutter / 2;
+  padding-left: $gutter / 2;
+}
+@mixin offset-left($cols: 0) {
+  margin-left: ($cols/12 * 100) * 1%;
 }
